# sdk-ops

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  cog.toml  pyproject.toml
.github/workflows/: release.yml
src/sdkops/: __main__.py  cli.py  generator.py  json_schema.py  openapi.py
tests/: __init__.py  schema_sample1.json  test_json_schema.py
